--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,7 +22,8 @@
     "drizzle-orm": "^0.44.2",
     "fastify": "^5.3.3",
     "pg": "^8.16.0",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "ulid": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^24.0.0",
