--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,19 +1,18 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json",
+	"extends": [
+		"@resto-rate/typescript-config/svelte.json",
+		"./.svelte-kit/tsconfig.json"
+	],
 	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
-		"moduleResolution": "bundler"
-	}
-	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
-	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
-	//
-	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
-	// from the referenced tsconfig.json - TypeScript does not merge them in
+		// SvelteKit handles path aliases automatically
+	},
+	"include": [
+		"ambient.d.ts",
+		"./src/**/*.js",
+		"./src/**/*.ts",
+		"./src/**/*.svelte",
+		"./tests/**/*.js",
+		"./tests/**/*.ts",
+		"./tests/**/*.svelte"
+	]
 }
