--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,10 +5,5 @@
 		"rootDir": "./src"
 	},
 	"include": ["src/**/*"],
-	"exclude": [
-		"node_modules", 
-		"dist",
-		"**/.svelte2tsx-language-server-files/**",
-		"**/*.svelte"
-	]
+	"exclude": ["node_modules", "dist", "**/.svelte2tsx-language-server-files/**", "**/*.svelte"]
 }
