--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,8 +1,5 @@
 {
-	"extends": [
-		"@resto-rate/typescript-config/svelte.json",
-		"./.svelte-kit/tsconfig.json"
-	],
+	"extends": ["@resto-rate/typescript-config/svelte.json", "./.svelte-kit/tsconfig.json"],
 	"compilerOptions": {
 		// SvelteKit handles path aliases automatically
 	},
