--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,11 +14,7 @@
 		"lint": "prettier --check . && eslint .",
 		"check-types": "svelte-check --tsconfig ./tsconfig.json",
 		"test:e2e": "playwright test",
-		"test": "npm run test:e2e",
-		"db:start": "docker compose up -d",
-		"db:push": "drizzle-kit push",
-		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"test": "npm run test:e2e"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -31,7 +27,6 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^20",
-		"drizzle-kit": "^0.31.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -47,18 +42,6 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@msgpack/msgpack": "^3.1.2",
-		"@node-rs/argon2": "^2.0.2",
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
-		"@resto-rate/config": "workspace:*",
-		"@resto-rate/constants": "workspace:*",
-		"@resto-rate/database": "workspace:*",
-		"@resto-rate/ulid": "workspace:*",
-		"@resto-rate/validation": "workspace:*",
-		"dotenv": "^16.5.0",
-		"drizzle-orm": "^0.44.2",
-		"postgres": "^3.4.5",
-		"ulid": "^3.0.1"
+		"@msgpack/msgpack": "^3.1.2"
 	}
 }
