--- a/env.template
+++ b/env.template
@@ -7,7 +7,13 @@
 # =============================================================================
 # DATABASE CONFIGURATION
 # =============================================================================
-DATABASE_URL="postgresql://username:password@localhost:5432/resto_rate"
+# PostgreSQL credentials (used by docker-compose.yml)
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=resto_rate
+
+# Full database URL (used by the application)
+DATABASE_URL="postgresql://postgres:password@localhost:5432/resto_rate"
 DATABASE_MAX_CONNECTIONS=20
 DATABASE_SSL=false
 
