--- a/package.json
+++ b/package.json
@@ -4,9 +4,27 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
+		"dev:api": "cd apps/api && bun run dev",
+		"dev:web": "cd apps/web && bun run dev",
 		"lint": "turbo run lint",
 		"format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md}\"",
-		"check-types": "turbo run check-types"
+		"check-types": "turbo run check-types",
+		"db:start": "docker compose up -d",
+		"db:stop": "docker compose down",
+		"db:restart": "bun run db:stop && bun run db:start",
+		"db:logs": "docker compose logs -f postgres",
+		"db:push": "cd apps/api && bun run db:push",
+		"db:generate": "cd apps/api && bun run db:generate",
+		"db:migrate": "cd apps/api && bun run db:migrate", 
+		"db:studio": "cd apps/api && bun run db:studio",
+		"db:drop": "cd apps/api && bun run db:drop",
+		"db:check": "cd apps/api && bun run db:check",
+		"db:up": "cd apps/api && bun run db:up",
+		"db:wait": "until docker compose exec postgres pg_isready -U ${POSTGRES_USER:-postgres}; do echo 'Waiting for database...'; sleep 2; done",
+		"db:reset": "bun run db:drop && bun run db:push",
+		"db:seed": "cd apps/api && bun run db:seed",
+		"db:purge": "bun run db:stop && docker compose rm -f && docker volume prune -f && bun run db:start && bun run db:wait && bun run db:push",
+		"db:fresh": "bun run db:purge && bun run db:seed"
 	},
 	"devDependencies": {
 		"eslint": "^9.28.0",
