--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,6 +8,9 @@
 	"exports": {
 		".": "./env.ts"
 	},
+	"dependencies": {
+		"dotenv": "^16.5.0"
+	},
 	"devDependencies": {
 		"typescript": "^5.0.0"
 	}
