--- a/env.template
+++ b/env.template
@@ -37,10 +37,28 @@ SESSION_MAX_AGE=2592000  # 30 days in seconds
 BCRYPT_ROUNDS=12
 
 # =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+# Log level: trace, debug, info, warn, error, fatal
+# Default: debug in development, info in production
+LOG_LEVEL=debug
+
+# Pretty print logs in development (true/false)
+LOG_PRETTY=true
+
+# Enable file logging (true/false)
+LOG_FILE=false
+
+# Log directory (when file logging is enabled)
+LOG_DIR=./logs
+
+# =============================================================================
 # ENVIRONMENT-SPECIFIC CONFIGURATION
 # =============================================================================
 NODE_ENV=development
 
 # Production-only variables (uncomment for production)
 # CORS_ORIGIN=https://yourdomain.com,https://www.yourdomain.com
-# API_URL=https://api.yourdomain.com 
+# API_URL=https://api.yourdomain.com
+# LOG_LEVEL=info
+# LOG_PRETTY=false 
