--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@msgpack/msgpack": "^3.1.2"
+		"@msgpack/msgpack": "^3.1.2",
+		"@resto-rate/logger": "workspace:*"
 	}
 }
