migrates componenets to shadcn and adds nightmode

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["@resto-rate/typescript-config/svelte.json", "./.svelte-kit/tsconfig.json"],
+	"extends": ["../../packages/typescript-config/svelte.json", "./.svelte-kit/tsconfig.json"],
 	"compilerOptions": {
 		// SvelteKit handles path aliases automatically
 	},
