--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-	"name": "resto-rate",
-	"private": true,
-	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"dev:api": "cd apps/api && bun run dev",
-		"dev:web": "cd apps/web && bun run dev",
-		"lint": "turbo run lint",
-		"format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md}\"",
-		"check-types": "turbo run check-types",
-		"db:start": "docker compose up -d",
-		"db:stop": "docker compose down",
-		"db:restart": "bun run db:stop && bun run db:start",
-		"db:logs": "docker compose logs -f postgres",
-		"db:push": "cd apps/api && bun run db:push",
-		"db:generate": "cd apps/api && bun run db:generate",
-		"db:migrate": "cd apps/api && bun run db:migrate", 
-		"db:studio": "cd apps/api && bun run db:studio",
-		"db:drop": "cd apps/api && bun run db:drop",
-		"db:check": "cd apps/api && bun run db:check",
-		"db:up": "cd apps/api && bun run db:up",
-		"db:wait": "until docker compose exec postgres pg_isready -U ${POSTGRES_USER:-postgres}; do echo 'Waiting for database...'; sleep 2; done",
-		"db:reset": "bun run db:drop && bun run db:push",
-		"db:seed": "cd apps/api && bun run db:seed",
-		"db:purge": "bun run db:stop && docker compose rm -f && docker volume prune -f && bun run db:start && bun run db:wait && bun run db:push",
-		"db:fresh": "bun run db:purge && bun run db:seed"
-	},
-	"devDependencies": {
-		"eslint": "^9.28.0",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.12",
-		"turbo": "^2.5.4",
-		"typescript": "^5.8.3"
-	},
-	"engines": {
-		"node": ">=18"
-	},
-	"packageManager": "bun@1.1.18",
-	"workspaces": [
-		"apps/*",
-		"packages/*"
-	],
-	"dependencies": {
-		"dotenv": "^16.5.0"
-	}
+  "name": "resto-rate",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "dev:api": "cd apps/api && bun run dev",
+    "dev:web": "cd apps/web && bun run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md}\"",
+    "check-types": "turbo run check-types",
+    "db:start": "docker compose up -d",
+    "db:stop": "docker compose down",
+    "db:restart": "bun run db:stop && bun run db:start",
+    "db:logs": "docker compose logs -f postgres",
+    "db:push": "cd apps/api && bun run db:push",
+    "db:generate": "cd apps/api && bun run db:generate",
+    "db:migrate": "cd apps/api && bun run db:migrate",
+    "db:studio": "cd apps/api && bun run db:studio",
+    "db:drop": "cd apps/api && bun run db:drop",
+    "db:check": "cd apps/api && bun run db:check",
+    "db:up": "cd apps/api && bun run db:up",
+    "db:wait": "until docker compose exec postgres pg_isready -U ${POSTGRES_USER:-postgres}; do echo 'Waiting for database...'; sleep 2; done",
+    "db:reset": "bun run db:drop && bun run db:push",
+    "db:seed": "cd apps/api && bun run db:seed",
+    "db:purge": "bun run db:stop && docker compose rm -f && docker volume prune -f && bun run db:start && bun run db:wait && bun run db:push",
+    "db:fresh": "bun run db:purge && bun run db:seed"
+  },
+  "devDependencies": {
+    "eslint": "^9.28.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "turbo": "^2.5.4",
+    "typescript": "^5.8.3"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "bun@1.1.18",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "web"
+  ]
 }
