--- a/env.template
+++ b/env.template
@@ -37,6 +37,20 @@ SESSION_MAX_AGE=2592000  # 30 days in seconds
 BCRYPT_ROUNDS=12
 
 # =============================================================================
+# GOOGLE OAUTH CONFIGURATION
+# =============================================================================
+# Get these from Google Cloud Console: https://console.cloud.google.com/
+# 1. Create a new project or select existing
+# 2. Enable Google+ API
+# 3. Create OAuth 2.0 credentials
+# 4. Add authorized redirect URIs:
+#    - Development: http://localhost:5173/auth/callback
+#    - Production: https://yourdomain.com/auth/callback
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:5173/auth/callback
+
+# =============================================================================
 # LOGGING CONFIGURATION
 # =============================================================================
 # Log level: trace, debug, info, warn, error, fatal
