--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,6 +18,7 @@
 		"db:check": "drizzle-kit check",
 		"db:up": "drizzle-kit up",
 		"db:seed": "tsx src/scripts/seed.ts",
+		"db:migrate-google-oauth": "tsx src/scripts/migrate-google-oauth.ts",
 		"test:logging": "tsx src/scripts/test-logging.ts"
 	},
 	"dependencies": {
@@ -37,6 +38,8 @@
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.44.2",
 		"fastify": "^5.3.3",
+		"google-auth-library": "^9.0.0",
+		"jsonwebtoken": "^9.0.0",
 		"pg": "^8.16.0",
 		"postgres": "^3.4.7",
 		"ulid": "^3.0.1"
