--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ yarn-error.log*
 **/*.log
 
 .idea
+
+
+
+.nx/cache
+.nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
