--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "resto-rate",
   "private": true,
   "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
+    "build": "nx run-many -t build",
+    "dev": "nx run-many -t dev",
     "dev:api": "cd apps/api && bun run dev",
     "dev:web": "cd apps/web && bun run dev",
-    "lint": "turbo run lint",
+    "lint": "nx run-many -t lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md}\"",
-    "check-types": "turbo run check-types",
+    "check-types": "nx run-many -t check-types",
     "db:start": "docker compose up -d",
     "db:stop": "docker compose down",
     "db:restart": "bun run db:stop && bun run db:start",
@@ -27,17 +27,22 @@
     "db:fresh": "bun run db:purge && bun run db:seed"
   },
   "devDependencies": {
-    "eslint": "^9.28.0",
+    "@nxext/svelte": "^21.0.0",
+    "@sveltejs/kit": "2.16.0",
+    "@sveltejs/vite-plugin-svelte": "5.0.0",
+    "eslint": "^9.29.0",
+    "npm-check-updates": "^18.0.1",
+    "nx": "^21.2.1",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.12",
-    "turbo": "^2.5.4",
-    "typescript": "^5.8.3"
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "typescript": "^5.8.3",
+    "vite": "6.2.6"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "bun@1.1.18",
+  "packageManager": "bun@1.2.17",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -47,6 +52,8 @@
   },
   "trustedDependencies": [
     "@tailwindcss/oxide",
+    "esbuild",
+    "nx",
     "web"
   ]
 }
