--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "nx run-many -t lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md}\"",
     "check-types": "nx run-many -t check-types",
+    "install:all": "bun install",
+    "clean:all": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && find . -name '.svelte-kit' -type d -prune -exec rm -rf '{}' +",
+    "refresh:all": "bun run clean:all && bun run install:all",
     "db:start": "docker compose up -d",
     "db:stop": "docker compose down",
     "db:restart": "bun run db:stop && bun run db:start",
