--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,9 +1,8 @@
 {
 	"extends": "@resto-rate/typescript-config/node.json",
 	"compilerOptions": {
-		"outDir": "./dist",
 		"rootDir": "./src"
 	},
 	"include": ["src/**/*"],
-	"exclude": ["node_modules", "dist", "**/.svelte2tsx-language-server-files/**", "**/*.svelte"]
+	"exclude": ["node_modules", "dist"]
 }
