--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
 		"@fastify/cors": "^11.0.1",
 		"@fastify/env": "^5.0.2",
 		"@fastify/helmet": "^13.0.1",
+		"@googlemaps/google-maps-services-js": "^3.4.1",
 		"@msgpack/msgpack": "^3.1.2",
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
@@ -42,7 +43,8 @@
 		"jsonwebtoken": "^9.0.2",
 		"pg": "^8.16.2",
 		"postgres": "^3.4.7",
-		"ulid": "^3.0.1"
+		"ulid": "^3.0.1",
+		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@resto-rate/eslint-config": "workspace:*",
