commit current state

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"scripts": {
 		"build": "nx run-many -t build",
 		"dev": "nx run-many -t dev",
-		"dev:api": "cd apps/api && bun run dev",
-		"dev:web": "cd apps/web && bun run dev",
+		"dev:api": "nx run api:dev",
+		"dev:go-app": "nx run go-app:dev",
+		"dev:web": "nx run web:dev",
 		"lint": "nx run-many -t lint",
 		"format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md,css}\"",
 		"check-types": "nx run-many -t check-types",
@@ -26,23 +27,7 @@
 		"refresh:all": "bun run clean:all && bun run install:all",
 		"clean:nx": "rm -rf .nx/cache .nx/workspace-data",
 		"clean:full": "bun run clean:all && bun run clean:nx",
-		"refresh:full": "bun run clean:full && bun run install:all",
-		"db:start": "docker compose up -d",
-		"db:stop": "docker compose down",
-		"db:restart": "bun run db:stop && bun run db:start",
-		"db:logs": "docker compose logs -f postgres",
-		"db:push": "cd apps/api && bun run db:push",
-		"db:generate": "cd apps/api && bun run db:generate",
-		"db:migrate": "cd apps/api && bun run db:migrate",
-		"db:studio": "cd apps/api && bun run db:studio",
-		"db:drop": "cd apps/api && bun run db:drop",
-		"db:check": "cd apps/api && bun run db:check",
-		"db:up": "cd apps/api && bun run db:up",
-		"db:wait": "until docker compose exec postgres pg_isready -U ${POSTGRES_USER:-postgres}; do echo 'Waiting for database...'; sleep 2; done",
-		"db:reset": "bun run db:drop && bun run db:push",
-		"db:seed": "cd apps/api && bun run db:seed",
-		"db:purge": "bun run db:stop && docker compose rm -f && docker volume prune -f && bun run db:start && bun run db:wait && bun run db:push",
-		"db:fresh": "bun run db:purge && bun run db:seed"
+		"refresh:full": "bun run clean:full && bun run install:all"
 	},
 	"devDependencies": {
 		"@nx-go/nx-go": "^3.3.1",
