--- a/packages/protos/project.json
+++ b/packages/protos/project.json
@@ -8,8 +8,12 @@
 		"generate": {
 			"executor": "nx:run-commands",
 			"options": {
-				"cwd": "packages/protos",
-				"command": "find src -name '*.proto' -exec protoc --go_out=generated/go --go-grpc_out=generated/go --proto_path=src {} +"
+				"cwd": ".",
+				"commands": [
+					"mkdir -p packages/protos/generated/go",
+					"find packages/protos/src -name '*.proto' -exec protoc --go_out=packages/protos/generated/go --go-grpc_out=packages/protos/generated/go --proto_path=. {} +"
+				],
+				"parallel": false
 			}
 		}
 	}
