--- a/apps/app/project.json
+++ b/apps/app/project.json
@@ -1,14 +1,14 @@
 {
-  "name": "go-app",
+  "name": "app",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/go-app/src",
+  "sourceRoot": "apps/app/src",
   "targets": {
     "build": {
       "executor": "@nx-go/nx-go:build",
       "options": {
-        "outputPath": "dist/apps/go-app",
-        "main": "apps/go-app/src/main.go"
+        "outputPath": "dist/apps/app",
+        "main": "apps/app/src/main.go"
       },
       "dependsOn": ["protos:generate"]
     },
@@ -16,7 +16,7 @@
       "executor": "nx:run-commands",
       "options": {
         "command": "go run ./src/main.go",
-        "cwd": "apps/go-app"
+        "cwd": "apps/app"
       },
       "dependsOn": ["protos:generate"]
     },
