--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"build": "nx run-many -t build",
 		"dev": "nx run-many -t dev",
 		"dev:api": "nx run api:dev",
-		"dev:go-app": "nx run go-app:dev",
+		"dev:app": "nx run app:dev",
 		"dev:web": "nx run web:dev",
 		"lint": "nx run-many -t lint",
 		"format": "prettier --write \"**/*.{ts,tsx,js,jsx,svelte,json,md,css}\"",
