--- a/package.json
+++ b/package.json
@@ -27,17 +27,11 @@
 	},
 	"devDependencies": {
 		"@nx-go/nx-go": "^3.3.1",
-		"@nxext/svelte": "^21.0.0",
-		"@sveltejs/kit": "2.16.0",
-		"@sveltejs/vite-plugin-svelte": "5.0.0",
 		"eslint": "^9.29.0",
 		"npm-check-updates": "^18.0.1",
 		"nx": "21.2.1",
 		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.13",
-		"typescript": "^5.8.3",
-		"vite": "6.2.6"
+		"typescript": "^5.8.3"
 	},
 	"engines": {
 		"node": ">=18"
