--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,12 @@
 		"vitest-browser-svelte": "^0.1.0"
 	},
 	"dependencies": {
+		"@bufbuild/buf": "^1.55.1",
+		"@bufbuild/protobuf": "^2.6.2",
+		"@bufbuild/protoc-gen-connect-es": "^0.13.0",
+		"@bufbuild/protoc-gen-es": "^2.6.2",
+		"@connectrpc/connect": "^2.0.2",
+		"@connectrpc/connect-web": "^2.0.2",
 		"@inlang/paraglide-js": "^2.0.0"
 	}
 }
