--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -9,3 +9,12 @@ plugins:
   - local: protoc-gen-connect-go
     out: apps/api/src/generated
     opt: paths=source_relative
+
+  - local: protoc-gen-es
+    out: apps/web/src/generated
+    include_imports: true
+    opt: target=ts
+  - local: protoc-gen-connect-es
+    out: apps/web/src/generated
+    include_imports: true
+    opt: target=ts
