--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"@types/node": "^24.1.0",
 		"@vitest/browser": "^3.2.3",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
