add air and rework buf gen

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -15,10 +15,11 @@
     "dev": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "go run ./src/main.go",
+        "command": "air",
         "cwd": "apps/api"
       },
-      "dependsOn": ["protos:generate"]
+      "dependsOn": ["protos:generate"],
+      "continuous": true
     },
     "lint": {
       "executor": "@nx-go/nx-go:lint",
