--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,23 +29,28 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^24.1.0",
 		"@vitest/browser": "^3.2.3",
+		"bits-ui": "^2.8.11",
 		"clsx": "^2.1.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
+		"mode-watcher": "^1.1.0",
+		"paneforge": "^1.0.0-next.6",
 		"playwright": "^1.53.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^4.0.0",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
+		"vaul-svelte": "^1.0.0-next.7",
 		"vite": "^7.0.4",
 		"vite-plugin-devtools-json": "^0.2.0",
 		"vitest": "^3.2.3",
@@ -58,6 +63,7 @@
 		"@bufbuild/protoc-gen-es": "^2.6.2",
 		"@connectrpc/connect": "^2.0.2",
 		"@connectrpc/connect-web": "^2.0.2",
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
