--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -14,7 +14,7 @@
     "dev": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "vite dev",
+        "command": "vite dev --open",
         "cwd": "apps/web"
       },
       "dependsOn": ["protos:generate"],
