--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,8 @@
 		"@bufbuild/protoc-gen-es": "^2.6.2",
 		"@connectrpc/connect": "^2.0.2",
 		"@connectrpc/connect-web": "^2.0.2",
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"@lucide/svelte": "^0.536.0",
+		"lucide-svelte": "^0.536.0"
 	}
 }
