--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -5,10 +5,10 @@
   "sourceRoot": "apps/web/src",
   "targets": {
     "build": {
-      "executor": "@nx/vite:build",
-      "outputs": ["{options.outputPath}"],
+      "executor": "nx:run-commands",
       "options": {
-        "outputPath": "dist/apps/web"
+        "command": "vite build",
+        "cwd": "apps/web"
       }
     },
     "dev": {
