--- a/apps/api/.air.toml
+++ b/apps/api/.air.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "nx run protos:generate:api && go build -o ./tmp/main ./src/main.go"
+  cmd = "go build -o ./tmp/main ./src/main.go"
   delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules", "src/generated"]
   exclude_file = []
