--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.1.0",
+    "@types/uuid": "^10.0.0",
     "@vitest/browser": "^3.2.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
@@ -59,6 +60,6 @@
     "@connectrpc/connect-web": "^2.0.2",
     "@inlang/paraglide-js": "^2.0.0",
     "@lucide/svelte": "^0.536.0",
-    "crypto": "^1.0.1"
+    "uuid": "^11.1.0"
   }
 }
