--- a/apps/web/project.json
+++ b/apps/web/project.json
@@ -15,7 +15,7 @@
     "dev": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "vite dev --open",
+        "command": "vite dev",
         "cwd": "apps/web"
       },
       "dependsOn": ["build"],
