--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,6 +34,9 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^3.0.0",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^1.12.6",
+    "flowbite-svelte-icons": "^2.3.0",
     "globals": "^16.0.0",
     "mode-watcher": "^1.1.0",
     "playwright": "^1.53.0",
