--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,48 +17,49 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@eslint/js": "^9.18.0",
-    "@playwright/test": "^1.49.1",
-    "@skeletonlabs/skeleton": "^3.1.7",
-    "@skeletonlabs/skeleton-svelte": "^1.3.1",
-    "@sveltejs/adapter-auto": "^6.0.0",
-    "@sveltejs/kit": "^2.22.0",
-    "@sveltejs/vite-plugin-svelte": "^6.0.0",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/node": "^24.1.0",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/js": "^9.33.0",
+    "@playwright/test": "^1.54.2",
+    "@sveltejs/adapter-auto": "^6.1.0",
+    "@sveltejs/kit": "^2.33.1",
+    "@sveltejs/vite-plugin-svelte": "^6.1.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/node": "^24.3.0",
     "@types/uuid": "^10.0.0",
-    "@vitest/browser": "^3.2.3",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-svelte": "^3.0.0",
-    "globals": "^16.0.0",
+    "@vitest/browser": "^3.2.4",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-svelte": "^3.11.0",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^1.12.6",
+    "flowbite-svelte-icons": "^2.3.0",
+    "globals": "^16.3.0",
     "mode-watcher": "^1.1.0",
-    "playwright": "^1.53.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.5",
-    "typescript": "^5.0.0",
-    "typescript-eslint": "^8.20.0",
-    "vite": "^7.0.4",
-    "vite-plugin-devtools-json": "^0.2.0",
-    "vitest": "^3.2.3",
+    "playwright": "^1.54.2",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "svelte": "^5.38.2",
+    "svelte-check": "^4.3.1",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "vite": "^7.1.3",
+    "vite-plugin-devtools-json": "^0.2.1",
+    "vitest": "^3.2.4",
     "vitest-browser-svelte": "^0.1.0"
   },
   "dependencies": {
-    "@bufbuild/buf": "^1.55.1",
-    "@bufbuild/protobuf": "^2.6.2",
+    "@bufbuild/buf": "^1.56.0",
+    "@bufbuild/protobuf": "^2.7.0",
     "@bufbuild/protoc-gen-connect-es": "^0.13.0",
-    "@bufbuild/protoc-gen-es": "^2.6.2",
-    "@connectrpc/connect": "^2.0.2",
-    "@connectrpc/connect-web": "^2.0.2",
-    "@inlang/paraglide-js": "^2.0.0",
+    "@bufbuild/protoc-gen-es": "^2.7.0",
+    "@connectrpc/connect": "^2.0.4",
+    "@connectrpc/connect-web": "^2.0.4",
+    "@inlang/paraglide-js": "^2.2.0",
     "@lucide/svelte": "^0.536.0",
     "uuid": "^11.1.0"
   }
