--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^24.3.0",
     "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitest/browser": "^3.2.4",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
